--- a/src/views/pages/cathalog.pug
+++ b/src/views/pages/cathalog.pug
@@ -9,4 +9,7 @@ block content
     .content_container
         include ../../components/searchBlock/searchBlockCathalogComponent.pug
         include ../../components/searchBlock/searchBlockCathalogFilterComponent.pug
+        include ../../components/rentsBlock/cardsBlockCathalogComponent.pug
+
         include ../../components/servicesBlock/servicesBlockCathalogComponent.pug
+        
