--- a/src/components/searchBlock/searchBlockCathalogFilterComponent.pug
+++ b/src/components/searchBlock/searchBlockCathalogFilterComponent.pug
@@ -4,7 +4,7 @@ include ../content/content.pug
 .content_container_searchBlockCathalogFilterContainer
     .content_container_searchBlockCathalogFilterContainer_innerContainer
         .content_container_searchBlockCathalogFilterContainer_innerContainer_top
-            .content_container_searchBlockCathalogFilterContainer_innerContainer_top_wrapper
+            .content_container_searchBlockCathalogFilterContainer_innerContainer_top_wrapper(class = 'menu')
                 .content_container_searchBlockCathalogFilterContainer_innerContainer_top_item
                     span Комнаты
                     .content_container_searchBlockCathalogFilterContainer_innerContainer_top_item_buttons
@@ -23,5 +23,104 @@ include ../content/content.pug
                 hr(class = 'third')
                 .content_container_searchBlockCathalogFilterContainer_innerContainer_top_right
                     +stdBtn({text: 'Очистить', cls:'primary', color: 'white', type: 'w5', gap: '3.5px', width: '100px'})
-                    +stdBtn({text: 'Показать объекты', cls:'primary', color: 'purple', type: 'w5', gap: '3.5px', icon: 'arrowLeft', iconPlace: 'right', iconColor: 'white', width: '192px'})
+                    +stdBtn({text: 'Показать объекты', cls:'primary', color: 'purple noGradient', type: 'w5', gap: '3.5px', icon: 'arrowLeft', iconPlace: 'right', iconColor: 'white', width: '192px'})
+
+        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra(class='hidden')
+            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_wrapper
+
+                .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_title Спальные места
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_button
+                             +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '150px', menuType: 'list'},
+                                [{text: '1 мест.'}, {text: '2 мест.'}, {text: '3 мест.'}, {text: '4 мест.'}, {text: '5 мест.'},])
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_title Район
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_button
+                             +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '150px', menuType: 'list'},
+                                [{text: '1 район.'}, {text: '2 район.'}, {text: '3 район.'}, {text: '4 район.'}, {text: '5 район.'},])
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_title Метро
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_top_item_button
+                             +menuBtn({text: 'Выберите', cls:'primary', color: 'menu', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '150px', menuType: 'list'},
+                                [{text: '1 район.'}, {text: '2 район.'}, {text: '3 район.'}, {text: '4 район.'}, {text: '5 район.'},])
+                
+                .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_wrapper
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Газовая плита', id: '1'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Духовка', id: '2'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Кофеварка', id: '3'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Микроволновая печь', id: '4'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посуда', id: '5'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посудомоечная машина', id: '6'})
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Газовая плита', id: '7'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Духовка', id: '8'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Кофеварка', id: '9'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Микроволновая печь', id: '10'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посуда', id: '11'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посудомоечная машина', id: '12'})
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Газовая плита', id: '13'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Духовка', id: '14'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Кофеварка', id: '15'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Микроволновая печь', id: '16'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посуда', id: '17'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посудомоечная машина', id: '18'})
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Газовая плита', id: '19'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Духовка', id: '20'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Кофеварка', id: '21'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Микроволновая печь', id: '22'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посуда', id: '23'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посудомоечная машина', id: '24'})
+                        .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Газовая плита', id: '25'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Духовка', id: '26'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Кофеварка', id: '27'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Микроволновая печь', id: '28'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посуда', id: '29'})
+                            .content_container_searchBlockCathalogFilterContainer_innerContainer_menuExtra_bottom_item_checkbox
+                                +stdCheckBox({text: 'Посудомоечная машина', id: '30'})
+
         .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom
+            .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom_wrapper
+                .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom_left
+                     +menuBtn({text: 'По умолчанию', cls:'sort', color: 'menu white', type: 'w5', gap: '3.5px', icon: 'arrowDown', iconPlace: 'right', iconColor: 'purple', width: '232px', menuType: 'list'},
+                                [{text: 'Сначала дорогие'}, {text: 'Сначала дешёвые'}, {text: 'Свежие'},])
+                .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom_right
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom_right_order
+                        +stdBtn({text: 'Список', cls:'lines', color: 'white selector', type: 'w5', gap: '3.5px', width: '106.5px', iconColor: 'purple'})
+                        +stdBtn({text: 'Плитки', cls:'cubes', color: 'white selector', type: 'w5', gap: '3.5px', width: '106.5px', iconColor: 'purple'})
+                    .content_container_searchBlockCathalogFilterContainer_innerContainer_bottom_right_map
+                        +stdBtn({text: 'Показать на карте', cls:'locBig', color: 'white', type: 'w7', gap: '5px', iconPlace: 'right', iconColor: 'purple'})
