--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,11 +18,12 @@ body {
 
 .content {
   //height: 3538px;
+  //height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  overflow: auto;
+  //overflow: auto;
   display: flex;
   z-index: 100;
   //position: relative;
