--- a/src/views/pages/cathalog.pug
+++ b/src/views/pages/cathalog.pug
@@ -1,6 +1,6 @@
 extends ../layouts/default
 block variables
-  title Главная
+  title Каталог
 
 block content
   include ../../components/buttons/buttons.pug
