--- a/src/components/rentsBlock/rentCard.pug
+++ b/src/components/rentsBlock/rentCard.pug
@@ -1,52 +1,97 @@
 include ../buttons/buttons.pug
 include ../content/content.pug
 
-mixin rentCard(vars = {status: 'Gold',photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'}, type: 'active', style: 'vertical'})
-    .rentCard
-        .rentCard_top
-            .rentCard_top_status(class = vars.status)
+mixin rentCard(vars = {status: 'Gold', photo: '../../assets/images/card_1_Img.png',price: '65.00 BYN',capacity: '4 (2+2)',rooms: '4 комн.',size: '179',address: 'Минск, б-р Мулявина, д. 10',metro: [{icon: 'metro', name: 'Грушевка'}, {icon: 'rail', name: 'Шабаны'}],description: 'Какое-то описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание квартиры, описание ...', ownerInfo: {photo: '../../assets/images/boyNextDoorImg.png', name: 'Dimitry', phone: ' +375 (29) 291-14-44', email: 'vladimir6234@tut.by'}, type: 'active', style: 'vertical'})
+    .rentCard(class = vars.style)
+        .rentCard_top(class = vars.style)
+            .rentCard_top_status(class = vars.style)
                 span= vars.status
-            .rentCard_top_photo
+            .rentCard_top_photo(class = vars.style)
                 img(src=`${vars.photo}`)
-        .rentCard_info
-            .rentCard_info_rooms
-                .rentCard_info_rooms_price
-                    span(class= 'price')= vars.price
-                    span(class= 'type')= 'За сутки'
-                .rentCard_info_rooms_buttons
-                    .rentCard_info_rooms_buttons_item
-                        include ../../assets/images/userImg.svg
-                        span= vars.capacity 
-                    .rentCard_info_rooms_buttons_item= vars.rooms
-                    .rentCard_info_rooms_buttons_item= `${vars.size} м²`
-            .rentCard_info_address
-                .rentCard_info_address_location
-                    include ../../assets/images/locBigImg.svg
-                    span= vars.address
-                .rentCard_info_address_stations
-                    each elm in vars.metro
-                        .rentCard_info_address_stations_item
-                            case elm.icon
-                                when 'metro'
-                                    include ../../assets/images/metroImg.svg
-                                when 'rail'
-                                    include ../../assets/images/pointImg.svg
-                            span= elm.name             
-            .rentCard_info_description= vars.description
-            
-        .rentCard_line
-            hr
-        .rentCard_bottom
-            .rentCard_bottom_left
-                .rentCard_bottom_left_fav(class= vars.type)
-                    +circleBtn({cls: 'button', color: 'heart', icon: 'heart'})
-                .rentCard_bottom_left_contacts
-                    +menuBtn(
-                    {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content'},
-                    [], {photo: vars.ownerInfo.photo, name: vars.ownerInfo.name, phone: vars.ownerInfo.phone, email: vars.ownerInfo.email})
-            .rentCard_bottom_right
-                .rentCard_bottom_buttons_more
-                    +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', })
+        
+        .rentCard_wrapper(class = vars.style)
+            case vars.style
+                when 'vertical'
+                    .rentCard_info(class = vars.style)
+                        .rentCard_info_rooms(class = vars.style)
+                            .rentCard_info_rooms_price(class = vars.style)
+                                span(class= 'price')= vars.price
+                                span(class= 'type')= 'За сутки'
+                            .rentCard_info_rooms_buttons(class = vars.style)
+                                .rentCard_info_rooms_buttons_item
+                                    include ../../assets/images/userImg.svg
+                                    span= vars.capacity 
+                                .rentCard_info_rooms_buttons_item= vars.rooms
+                                .rentCard_info_rooms_buttons_item= `${vars.size} м²`
+                        .rentCard_info_address
+                            .rentCard_info_address_location
+                                include ../../assets/images/locBigImg.svg
+                                span= vars.address
+                            .rentCard_info_address_stations
+                                each elm in vars.metro
+                                    .rentCard_info_address_stations_item
+                                        case elm.icon
+                                            when 'metro'
+                                                include ../../assets/images/metroImg.svg
+                                            when 'rail'
+                                                include ../../assets/images/pointImg.svg
+                                        span= elm.name             
+                        .rentCard_info_description= vars.description
+                    .rentCard_line
+                        hr
+                    .rentCard_bottom(class = vars.style)
+                        .rentCard_bottom_left
+                            .rentCard_bottom_left_fav(class= vars.type)
+                                +circleBtn({cls: 'button', color: 'heart', icon: 'heart'})
+                            .rentCard_bottom_left_contacts
+                                +menuBtn(
+                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content'},
+                                [], {photo: vars.ownerInfo.photo, name: vars.ownerInfo.name, phone: vars.ownerInfo.phone, email: vars.ownerInfo.email})
+                        .rentCard_bottom_right
+                            .rentCard_bottom_buttons_more
+                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', })
+
+                when 'horizontal'
+                    .rentCard_info(class = vars.style)
+                        .rentCard_info_rooms(class = vars.style)
+                            .rentCard_info_rooms_name(class = vars.style)= vars.name
+                                .rentCard_info_address(class = vars.style)
+                                    .rentCard_info_address_location
+                                        include ../../assets/images/locBigImg.svg
+                                        span= vars.address
+                            .rentCard_info_rooms_price(class = vars.style)
+                                span(class= 'price')= vars.price
+                                span(class= 'type')= 'За сутки'
+                        
+                        .rentCard_info_rooms_buttons(class = vars.style)
+                            .rentCard_info_rooms_buttons_item
+                                include ../../assets/images/userImg.svg
+                                span= vars.capacity 
+                            .rentCard_info_rooms_buttons_item= vars.rooms
+                        
+                            .rentCard_info_address_stations
+                                each elm in vars.metro
+                                    .rentCard_info_address_stations_item
+                                        case elm.icon
+                                            when 'metro'
+                                                include ../../assets/images/metroImg.svg
+                                            when 'rail'
+                                                include ../../assets/images/pointImg.svg
+                                        span= elm.name             
+                        .rentCard_info_description(class = vars.style)= vars.description
+
+                    .rentCard_bottom(class = vars.style)
+                        .rentCard_bottom_left
+                            
+                            .rentCard_bottom_left_contacts
+                                +menuBtn(
+                                {text: 'Контакты', cls:'phone', color: 'menu purpleText', type: 'w7', gap: '10px', icon: 'phone', iconPlace: 'right', iconColor: 'purple' , width: '124px', menuType: 'content'},
+                                [], {photo: vars.ownerInfo.photo, name: vars.ownerInfo.name, phone: vars.ownerInfo.phone, email: vars.ownerInfo.email})
+                            .rentCard_bottom_left_fav(class= vars.type)
+                                +stdBtn({text: 'В закладки', cls:'heart', color: 'heart', type: 'w7',})
+                        .rentCard_bottom_right
+                            .rentCard_bottom_buttons_more
+                                +stdBtn({text: 'Подробнее', cls:'primary', color: 'yellow light', type: 'w7', })
 
 mixin rentCardList(varsObject)
     each elm in varsObject
