--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,5 +40,89 @@ body {
   //z-index: 100;
 
 }
+.login {
+  &_content { 
+    width: 1440px;
+    height: 900px;
+    position: relative;
+    z-index: 10;
+    @include centringMixin;
 
+    &_background {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-image: url(../images/backgroundImg.png), linear-gradient(1.09deg, #7E6AF3 0.86%, #6540CD 99.01%);
+      
+    }
+    &_form {
+      
+      background: #FFFEFE;
+      box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+      border-radius: 10px;
+      position: relative;
+      
+      &_innerContent {
+        $innerMargin: 50px;
+        margin: $innerMargin;
+
+        &_register {
+
+        }
+
+        &_auth {
+
+          width: calc(406px - $innerMargin*2);
+          height: calc(536px - $innerMargin*2);
+          
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+
+          &_title {
+            @include fontStd(#000000, 25px, 700, 30px);
+            margin-bottom: 15px;
+          }
+
+          &_description {
+            @include fontStd(#686868, 14px, 400, 17px);
+            margin-bottom: 35px;
+          }
+
+          &_inputs {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 38px;
+            &_bottom {
+              display: flex;
+              justify-content: space-between;
+              a {
+                @include fontStd(#664EF9, 14px, 500, 20px);
+                text-decoration: none
+              }             
+            }
+          }
+
+          &_button {
+            margin-bottom: 50px;
+          }
+
+          &_createAcc {
+            span {
+              @include fontStd(#686868, 14px, 400, 20px);
+            }
+            a {
+              @include fontStd(#664EF9, 14px, 500, 20px);
+            }
+          }
+        }
+
+        &_confirm {
+
+        }
+      }
+    }
+  }
+}
 
