--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -66,10 +66,6 @@ body {
         $innerMargin: 50px;
         margin: $innerMargin;
 
-        &_register {
-
-        }
-
         &_auth {
 
           width: calc(406px - $innerMargin*2);
@@ -114,15 +110,214 @@ body {
             }
             a {
               @include fontStd(#664EF9, 14px, 500, 20px);
+                text-decoration: none
             }
           }
-        }
-
-        &_confirm {
-
         }
       }
     }
   }
 }
 
+.register{
+  &_content { 
+    width: 1440px;
+    height: 900px;
+    position: relative;
+    z-index: 10;
+    @include centringMixin;
+
+    &_background {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-image: url(../images/backgroundImg.png), linear-gradient(1.09deg, #7E6AF3 0.86%, #6540CD 99.01%);
+      
+    }
+    &_form {
+      
+      background: #FFFEFE;
+      box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+      border-radius: 10px;
+      position: relative;
+      
+      
+      &_innerContent {
+        $innerMargin: 50px;
+        margin: $innerMargin;
+        display: flex;
+        gap: 50px;
+        width: calc(844px - $innerMargin*2);
+        min-height: calc(581px - $innerMargin*2);
+        &_auth {
+
+
+          
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+
+          &_title {
+            @include fontStd(#000000, 25px, 700, 30px);
+            margin-bottom: 30px;
+          }
+
+          &_inputs {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 20px;
+          }
+          &_captcha {
+            width: 306px;
+            height: 75px;
+            //background-color: red;
+            margin-bottom: 20px;
+            border-radius: 3px;
+            background-image: url(../images/captcha.png);
+          }
+          &_alert {
+            width: 306px;
+            height: 48px;
+            background: #EB5757;
+            border-radius: 33px;
+            gap: 15px;
+            margin-bottom: 20px;
+            display: none;
+
+            &.wrong {
+              display: block;
+              @include centringMixin;
+            }
+            span {
+              @include fontStd(white, 16px, 700, 24px);
+            }
+            path {
+              fill: rgba(255, 255, 255, 0.5);
+            }
+          }
+        }
+
+        &_info {
+
+          &_description {
+            width: 388px;
+            height: 231px;
+            margin-top: 60px;
+            margin-bottom: 70px;
+            display: flex;
+            flex-direction: column;
+            justify-content: baseline;
+            span {
+              padding: 0;
+              @include fontStd(#686868, 14px, 600, 150%);
+            }
+            ul {
+              margin: 0;
+              padding: 0 0 0 0;
+
+              li {
+                @include fontStd(#686868, 14px, 400, 150%);
+                list-style-position: inside
+
+              }
+            }
+          }
+
+          &_link {
+            span {
+              @include fontStd(#686868, 14px, 400, 20px);
+            }
+            a {
+              @include fontStd(#664EF9, 14px, 500, 20px);
+                text-decoration: none
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.submit{
+  &_content { 
+    width: 1440px;
+    height: 900px;
+    position: relative;
+    z-index: 10;
+    @include centringMixin;
+
+    &_background {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-image: url(../images/backgroundImg.png), linear-gradient(1.09deg, #7E6AF3 0.86%, #6540CD 99.01%);
+      
+    }
+    &_form {
+      
+      background: #FFFEFE;
+      box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+      border-radius: 10px;
+      position: relative;
+      
+      &_innerContent {
+        
+        margin-top: 50px;
+        margin-left: 31px;
+        margin-right: 31px;
+        &_auth {
+
+          width: calc(406px - 62px);
+          height: calc(330px - 50px);
+          
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+
+          &_title {
+            @include fontStd(#000000, 25px, 700, 30px);
+            margin-bottom: 20px;
+            text-align: center
+          }
+
+          &_description {
+            @include fontStd(#686868, 14px, 400, 17px);
+            margin-bottom: 22px;
+            text-align: center
+          }
+
+          &_inputs {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            margin-bottom: 38px;
+            &_bottom {
+              display: flex;
+              justify-content: space-between;
+              a {
+                @include fontStd(#664EF9, 14px, 500, 20px);
+                text-decoration: none
+              }             
+            }
+          }
+
+          &_button {
+            margin-bottom: 50px;
+          }
+
+          &_createAcc {
+            span {
+              @include fontStd(#686868, 14px, 400, 20px);
+            }
+            a {
+              @include fontStd(#664EF9, 14px, 500, 20px);
+                text-decoration: none
+            }
+          }
+        }
+      }
+    }
+  }
+}
