--- a/src/views/pages/login.pug
+++ b/src/views/pages/login.pug
@@ -21,5 +21,5 @@ block content
                         .login_content_form_innerContent_auth_button
                             +stdBtn({text: 'Войти', cls: 'primary', color: 'authBtn', textAlign: 'center'})
                         .login_content_form_innerContent_auth_createAcc
-                            span Ещё нет аккаунта?
-                            a(href = '/cathalog.html') Создайте аккаунт
+                            span= 'Ещё нет аккаунта? '
+                            a(href = '/register.html') Создайте аккаунт
