--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -321,3 +321,210 @@ body {
     }
   }
 }
+
+.contact {
+  display: flex;
+  justify-content: center;
+  
+  &_alert {
+    @include centringMixin;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: calc(1038px);
+    background: rgba(46, 46, 46, 0.7);
+    z-index: 999;
+    display: none;
+
+    &_content {
+
+      position: fixed;
+      background: #FFFEFE;
+      box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+      border-radius: 10px;
+      left: 35.9%;
+      right: 35.9%;
+      top: 27.46%;
+      bottom: 42.39%;
+      width: 406px;
+      height: 313px;
+      &_wrapper {
+        margin: 50px;
+        @include centringMixin;
+        flex-direction: column;
+        &_title {
+          @include fontStd(#000000, 25px, 700, 30px);
+          margin-bottom: 20px;
+          text-align: center
+        }
+  
+        &_description {
+          width: 310px;
+          @include fontStd(#686868, 14px, 400, 17px);
+          margin-bottom: 30px;
+          text-align: center
+        }
+        &_button {
+          
+        }
+      }
+    }
+    &.active {
+      display: block;
+    };
+  }
+
+  &_content { 
+    width: 1440px;
+    height: 688px;
+    position: relative;
+    z-index: 10;
+    //@include centringMixin;
+
+    &_background {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background-image: url(../images/backgroundImg.png), linear-gradient(1.09deg, #7E6AF3 0.86%, #6540CD 99.01%);     
+    }
+
+    &_innerContainer {
+      position: relative;
+      top: 0;
+      display: flex;
+      margin-top: 77px;
+      margin-left: 80px;
+      
+      &_info {
+        width: 515px;
+
+        &_title {
+          @include fontStd(#FFFFFF, 30px, 700, 100%);
+          margin-bottom: 30px;
+        }
+        &_description {
+          @include fontStd(#FFFFFF, 16px, 500, 150%);
+          margin-bottom: 30px;
+        }
+
+        &_group {
+          display: flex;
+          flex-direction: column;
+          gap: 11px;
+          margin-bottom: 30px;
+          &_item {
+            display: flex;
+            gap: 20px;
+            &_icon {
+              width: 30px;
+              height: 30px;
+              background: rgba(255, 255, 255, 0.1);
+              border-radius: 50%;
+              @include centringMixin;
+              svg {
+                width: 50%;
+                height: 50%;
+                
+                path {                 
+                  fill :  #ffffff;
+                }
+              }
+            }
+
+            &_text {
+              span {
+                &.std {
+                  @include fontStd(white, 18px, 400, 150%);
+                }
+                &.bold {
+                  @include fontStd(white, 18px, 600, 150%);
+                }
+                &.line {
+                  @include fontStd(white, 18px, 600, 150%);
+                  text-decoration: underline;
+                }
+              }
+            }
+            &_socials {
+              display: flex;
+              gap: 10px;
+            }
+          }
+        }
+
+        &_owner {
+          @include fontStd(white, 14px, 400, 150%);
+          margin-bottom: 39px;
+        }
+
+        &_alert {
+          background: rgba(80, 57, 189, 0.5);
+          border-radius: 10px;
+          display: flex;
+          align-items: center;
+          gap: 22px;
+          height: 90px;
+
+          &_icon {
+            width: 35px;
+            height: 35px;
+            margin-left: 28px;
+            @include centringMixin;
+              svg {
+                width: 100%;
+                height: 100%;
+                
+                path {                 
+                  fill :  #5039BD;;
+                }
+              }
+          }
+          &_text {
+              @include fontStd(white, 16px, 500, 150%);
+          }
+        }
+      }
+
+      &_form {
+
+        width: calc(625px);
+        height: calc(516px);
+
+        &_wrapper {
+          margin-top: 40px;
+          margin-left: 40px;
+          margin-right: 37px;
+          margin-bottom: 44px;
+        }
+
+        background: #FFFEFE;
+        box-shadow: 0px 20px 40px rgba(39, 95, 158, 0.2);
+        border-radius: 10px;
+        margin-left: 31px;
+
+        &_input {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          span {
+            @include fontStd(#686868, 14px, 500, 17px);
+          }
+        }
+
+        &_top {
+            display: flex;
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        &_textArea {
+          margin-bottom: 40px;
+        }
+        &_button {
+          @include centringMixin;
+          height: 48px;
+        }
+      }
+    }
+  }
+}
