--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -697,6 +697,13 @@
         right: 7%;
         top: 106.5%; 
     }
+    &.error1 {
+        top: 0;
+    }
+    &.error2 {
+        left: 1192px;
+        top: 559px;
+    }
     &.example {
         left: 27.5%;
         top: 58%; 
