--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -137,6 +137,9 @@ $hoverLine: 2px;
     font-size: 16px;
     line-height: 24px;
 
+    path {
+      fill: black;
+    }
     &:hover {
       background: #FEC100;
     }
